Implement parse terminal output JSON

--- a/Windows/MainWindow.xaml
+++ b/Windows/MainWindow.xaml
@@ -42,7 +42,29 @@
         <ListView Name="listTerminal" Grid.Row="2">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <TextBlock Text="{Binding}" TextWrapping="Wrap" />
+                    <StackPanel>
+                        <Expander Header="{Binding PlainText}">
+                            <ListView ItemsSource="{Binding ParsedFields}">
+                                <ListView.Resources>
+                                    <Style TargetType="GridViewColumnHeader">
+                                        <Setter Property="Visibility" Value="Collapsed" />
+                                    </Style>
+                                </ListView.Resources>
+                                <ListView.View>
+                                    <GridView>
+                                        <GridViewColumn Header="Key" DisplayMemberBinding="{Binding Key}" />
+                                        <GridViewColumn Header="Value">
+                                            <GridViewColumn.CellTemplate>
+                                                <DataTemplate>
+                                                    <TextBlock Text="{Binding Value}" TextWrapping="Wrap" />
+                                                </DataTemplate>
+                                            </GridViewColumn.CellTemplate>
+                                        </GridViewColumn>
+                                    </GridView>
+                                </ListView.View>
+                            </ListView>
+                        </Expander>
+                    </StackPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
