--- a/Windows/MainWindow.xaml
+++ b/Windows/MainWindow.xaml
@@ -52,7 +52,7 @@
             </Grid.ColumnDefinitions>
 
             <Expander Name="expanderFilter" Grid.RowSpan="2" Grid.ColumnSpan="2" Panel.ZIndex="0" Header="Filters" IsExpanded="True">
-                <controls:FilterListView Name="filterView" />
+                <controls:FilterListView x:Name="filterView" />
             </Expander>
             
             <Button Name="buttonFilter" Grid.Row="0" Grid.Column="1" Panel.ZIndex="1" Content="Filter" Click="ButtonFilter_Click" />
