--- a/Windows/MainWindow.xaml
+++ b/Windows/MainWindow.xaml
@@ -3,7 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TerminalMonitor"
+        xmlns:local="clr-namespace:TerminalMonitor" 
+        xmlns:controls="clr-namespace:TerminalMonitor.Windows.Controls"
         mc:Ignorable="d"
         Title="TerminalMonitor" Height="450" Width="800" Loaded="Window_Loaded" Closing="Window_Closing">
     <Grid>
@@ -13,33 +14,53 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <Grid Name="gridCommand" Grid.Row="0" Margin="2">
+        <Expander Name="expanderCommand" Grid.Row="0" Header="Command" IsExpanded="True">
+            <Grid Name="gridCommand" Margin="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+
+                <Label Name="labelCommand" Grid.Row="0" Grid.Column="0" Content="Command" />
+                <TextBox Name="textBoxCommand" Grid.Row="0" Grid.Column="1" />
+                <Button Name="buttonExecute" Grid.Row="0" Grid.Column="2" Margin="2" Content="Run" Click="ButtonExecute_Click" />
+
+                <Label Name="labelArguments" Grid.Row="1" Grid.Column="0" Content="Arguments" />
+                <TextBox Name="textBoxArguments" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" />
+
+                <Label Name="labelWorkDir" Grid.Row="2" Grid.Column="0" Content="Working Directory" />
+                <TextBox Name="textBoxWorkDir" Grid.Row="2" Grid.Column="1" />
+                <Button Name="buttonBrowseWorkDir" Grid.Row="2" Grid.Column="2" Margin="2" Content="Browse" Click="ButtonBrowseWorkDir_Click" />
+            </Grid>
+        </Expander>
+
+        <Grid Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
 
-            <Label Name="labelCommand" Grid.Row="0" Grid.Column="0" Content="Command" />
-            <TextBox Name="textBoxCommand" Grid.Row="0" Grid.Column="1" />
-            <Button Name="buttonExecute" Grid.Row="0" Grid.Column="2" Margin="2" Content="Run" Click="ButtonExecute_Click" />
-
-            <Label Name="labelArguments" Grid.Row="1" Grid.Column="0" Content="Arguments" />
-            <TextBox Name="textBoxArguments" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" />
-
-            <Label Name="labelWorkDir" Grid.Row="2" Grid.Column="0" Content="Working Directory" />
-            <TextBox Name="textBoxWorkDir" Grid.Row="2" Grid.Column="1" />
-            <Button Name="buttonBrowseWorkDir" Grid.Row="2" Grid.Column="2" Margin="2" Content="Browse" Click="ButtonBrowseWorkDir_Click" />
+            <Expander Name="expanderFilter" Grid.RowSpan="2" Grid.ColumnSpan="2" Panel.ZIndex="0" Header="Filters" IsExpanded="True">
+                <controls:FilterListView x:Name="filterView" />
+            </Expander>
+            
+            <Button Name="buttonFilter" Grid.Row="0" Grid.Column="1" Panel.ZIndex="1" Content="Filter" Click="ButtonFilter_Click" />
         </Grid>
 
-        <GridSplitter Grid.Row="1" Height="5" HorizontalAlignment="Stretch" />
+        <GridSplitter Grid.Row="2" Height="5" HorizontalAlignment="Stretch" />
 
-        <ListView Name="listTerminal" Grid.Row="2">
+        <ListView Name="listTerminal" Grid.Row="3">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel>
@@ -68,6 +89,6 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-
+        
     </Grid>
 </Window>
