--- a/Resources/ConverterDictionary.xaml
+++ b/Resources/ConverterDictionary.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-                    xmlns:converter="clr-namespace:TerminalMonitor.Windows.Converters">
+                    xmlns:converters="clr-namespace:TerminalMonitor.Windows.Converters">
 
-    <converter:MatchOperatorToStringConverter x:Key="MatchOperatorToStringConverter" />
+    <converters:MatchOperatorToStringConverter x:Key="MatchOperatorToStringConverter" />
     
 </ResourceDictionary>
