--- a/Windows/Controls/TerminalView.xaml
+++ b/Windows/Controls/TerminalView.xaml
@@ -5,7 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TerminalMonitor.Windows.Controls"
              xmlns:controls="clr-namespace:TerminalMonitor.Windows.Controls"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
+             d:DataContext="{d:DesignInstance Type=local:TerminalViewDataContextVO}"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.RowDefinitions>
@@ -13,8 +14,8 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        
-        <Grid Grid.Row="0">
+
+        <Grid Name="gridFilters" Grid.Row="0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
@@ -24,7 +25,7 @@
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
 
-            <Expander Name="expanderFilter" Grid.RowSpan="2" Grid.ColumnSpan="2" Panel.ZIndex="0" Header="Filters" IsExpanded="True">
+            <Expander Name="expanderFilters" Grid.RowSpan="2" Grid.ColumnSpan="2" Panel.ZIndex="0" Header="Filters" IsExpanded="True">
                 <controls:FilterListView x:Name="filterView" />
             </Expander>
 
@@ -37,6 +38,7 @@
             <ListView.ContextMenu>
                 <ContextMenu>
                     <MenuItem Name="menuItemClear" Header="Clear" Click="MenuItemClear_Click" />
+                    <MenuItem Name="menuItemAutoScroll" Header="Auto Scroll" IsChecked="{Binding AutoScroll}" Click="MenuItemAutoScroll_Click" />
                 </ContextMenu>
             </ListView.ContextMenu>
             
