--- a/Windows/Controls/TerminalView.xaml
+++ b/Windows/Controls/TerminalView.xaml
@@ -27,7 +27,7 @@
             </Grid.ColumnDefinitions>
 
             <Expander Name="expanderFields" Grid.RowSpan="2" Grid.ColumnSpan="2" Panel.ZIndex="0" Header="Visible Fields" IsExpanded="True">
-                <controls:FieldListView x:Name="fieldListView" />
+                <controls:FieldPropertiesView x:Name="fieldPropertiesView" />
             </Expander>
 
             <Button Name="buttonApplyFields" Grid.Row="0" Grid.Column="1" Panel.ZIndex="1" Content="Apply" Click="ButtonApplyFields_Click" />
