--- a/Windows/Controls/FieldConditionView.xaml
+++ b/Windows/Controls/FieldConditionView.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:TerminalMonitor.Windows.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="50" d:DesignWidth="800">
-    <StackPanel Orientation="Horizontal">
+    <StackPanel Name="stkPnl" Orientation="Horizontal">
         <Label Name="lblKey" Content="Key" />
         <TextBox Name="txtBxKey" MinWidth="100" MaxWidth="200" Margin="0, 0, 10, 0" Text="{Binding Path=FieldKey}" />
 
