--- a/Windows/Controls/TextStyleConditionView.xaml
+++ b/Windows/Controls/TextStyleConditionView.xaml
@@ -5,11 +5,12 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TerminalMonitor.Windows.Controls"
              xmlns:controls="clr-namespace:TerminalMonitor.Windows.Controls"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
+             d:DataContext="{d:DesignInstance Type=local:TextStyleConditionViewDataContextVO}"
              d:DesignHeight="450" d:DesignWidth="800">
     <StackPanel Orientation="Vertical">
         <GroupBox Header="Default">
-            <controls:TextStyleView />
+            <controls:TextStyleView TextStyle="{Binding Style}"  />
         </GroupBox>
         <GroupBox Header="Conditions" MinHeight="50">
             <StackPanel Orientation="Vertical">
@@ -28,14 +29,17 @@
                         </Grid.ColumnDefinitions>
                         <Button Name="btnAdd" Grid.Column="0" Content="+" Click="BtnAdd_Click" />
                         <Button Name="btnDelete" Grid.Column="1" Content="-" Click="BtnDelete_Click" />
-                        <Button Name="btnMoveUp" Grid.Column="2" Content="←" Click="BtnMoveUp_Click" />
-                        <Button Name="btnMoveDown" Grid.Column="3" Content="→" Click="BtnMoveDown_Click" />
+                        <Button Name="btnMoveUp" Grid.Column="2" Content="↑" Click="BtnMoveUp_Click" />
+                        <Button Name="btnMoveDown" Grid.Column="3" Content="↓" Click="BtnMoveDown_Click" />
                     </Grid>
                 </Grid>
                 <ListView Name="lstStyleCondtions" MinHeight="30" SelectionChanged="lstStyleCondtions_SelectionChanged">
                     <ListView.ItemTemplate>
                         <DataTemplate>
-                            <controls:FieldConditionView FieldCondition="{Binding Condition}" />
+                            <WrapPanel Orientation="Horizontal">
+                                <controls:TextStyleView TextStyle="{Binding Style}" />
+                                <controls:FieldConditionView FieldCondition="{Binding Condition}" />
+                            </WrapPanel>
                         </DataTemplate>
                     </ListView.ItemTemplate>
                 </ListView>
