--- a/Windows/Controls/TextStyleView.xaml
+++ b/Windows/Controls/TextStyleView.xaml
@@ -8,7 +8,7 @@
              d:DataContext="{d:DesignInstance Type=local:TextStyleViewDataContextVO}"
              d:DesignHeight="150" d:DesignWidth="800">
 
-    <WrapPanel Name="stkPnlStyle" Grid.Row="1" Grid.Column="1" Orientation="Horizontal">
+    <WrapPanel Name="wrpPnl" Grid.Row="1" Grid.Column="1" Orientation="Horizontal">
         <Label Name="lblForeground" Content="Foreground" />
         <Rectangle Name="rctForeground" Width="10" Height="10" Margin="0, 0, 10, 0"
                    Fill="{Binding Foreground}" Stroke="{DynamicResource {x:Static SystemColors.ActiveBorderBrushKey}}"
