--- a/Windows/Controls/FieldConditionView.xaml
+++ b/Windows/Controls/FieldConditionView.xaml
@@ -4,11 +4,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TerminalMonitor.Windows.Controls"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
+             d:DataContext="{d:DesignInstance Type=local:FieldConditionViewDataContextVO}"
              d:DesignHeight="50" d:DesignWidth="800">
     <StackPanel Name="stkPnl" Orientation="Horizontal">
         <Label Name="lblKey" Content="Key" />
-        <TextBox Name="txtBxKey" MinWidth="100" MaxWidth="200" Margin="0, 0, 10, 0" Text="{Binding Path=FieldKey}" />
+        <TextBox Name="txtBxKey" MinWidth="100" MaxWidth="200" Margin="0, 0, 10, 0" Text="{Binding FieldKey}" />
 
         <ComboBox Name="cmbBxOperator" Width="100" Margin="0, 0, 10, 0" SelectedValue="{Binding MatchOperator}">
             <ComboBox.ItemTemplate>
