--- a/Windows/FieldDisplayDetailWindow.xaml
+++ b/Windows/FieldDisplayDetailWindow.xaml
@@ -20,7 +20,9 @@
                 </Grid.ColumnDefinitions>
 
                 <Label Name="lblKey" Grid.Row="0" Grid.Column="0" Content="Key" />
-                <TextBox Name="txtBxKey" Grid.Row="0" Grid.Column="1" Text="{Binding FieldKey}" />
+                <TextBox Name="txtBxKey" Grid.Row="0" Grid.Column="1"
+                         Style="{StaticResource textBoxInError}"
+                         Validation.ErrorTemplate="{StaticResource validationTemplate}" />
             </Grid>
         </GroupBox>
 
