--- a/Windows/MainWindow.xaml
+++ b/Windows/MainWindow.xaml
@@ -12,35 +12,19 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
 
-        <Expander Name="expanderCommand" Grid.Row="0" Header="Command" IsExpanded="True">
-            <Grid Name="gridCommand" Margin="2">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="Auto" />
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
-
-                <Label Name="labelCommand" Grid.Row="0" Grid.Column="0" Content="Command" />
-                <TextBox Name="textBoxCommand" Grid.Row="0" Grid.Column="1" />
-                <Button Name="buttonExecute" Grid.Row="0" Grid.Column="2" Margin="2" Content="Run" Click="ButtonExecute_Click" />
-
-                <Label Name="labelArguments" Grid.Row="1" Grid.Column="0" Content="Arguments" />
-                <TextBox Name="textBoxArguments" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" />
-
-                <Label Name="labelWorkDir" Grid.Row="2" Grid.Column="0" Content="Working Directory" />
-                <TextBox Name="textBoxWorkDir" Grid.Row="2" Grid.Column="1" />
-                <Button Name="buttonBrowseWorkDir" Grid.Row="2" Grid.Column="2" Margin="2" Content="Browse" Click="ButtonBrowseWorkDir_Click" />
-            </Grid>
+        <Expander Name="expanderCommand" Grid.Row="0" Grid.Column="0" Header="Command" IsExpanded="True">
+            <controls:CommandListView x:Name="commandListView" />
         </Expander>
 
-        <controls:TerminalView x:Name="terminalView" Grid.Row="1" />
+        <GridSplitter Grid.Row="0" Grid.RowSpan="2" Grid.Column="1" Width="5" HorizontalAlignment="Stretch" />
+        
+        <controls:TerminalView x:Name="terminalView" Grid.Row="0" Grid.RowSpan="2" Grid.Column="2" />
 
     </Grid>
 </Window>
