--- a/Windows/MainWindow.xaml
+++ b/Windows/MainWindow.xaml
@@ -30,8 +30,8 @@
         </Expander>
 
         <GridSplitter Grid.Row="0" Grid.RowSpan="3" Grid.Column="1" Width="5" HorizontalAlignment="Stretch" />
-        
-        <controls:TerminalView x:Name="terminalView" Grid.Row="0" Grid.RowSpan="3" Grid.Column="2" />
+
+        <controls:TerminalTabControl x:Name="terminalTabControl" Grid.Row="0" Grid.RowSpan="3" Grid.Column="2" />
 
     </Grid>
 </Window>
