--- a/Windows/Controls/TerminalTabControl.xaml
+++ b/Windows/Controls/TerminalTabControl.xaml
@@ -14,23 +14,27 @@
                         <Setter.Value>
                             <ControlTemplate TargetType="TabItem">
                                 <Border Name="bdr" BorderThickness="1,1,1,0" BorderBrush="Gainsboro" CornerRadius="4,4,0,0" Margin="2,0"
-                                        ToolTip="{Binding RelativeSource={RelativeSource AncestorType=TabItem}, Path=Header}">
+                                        ToolTip="{Binding RelativeSource={RelativeSource AncestorType=TabItem}, Path=Header}"
+                                        Tag="{Binding RelativeSource={RelativeSource AncestorType=TabItem}, Path=Tag}"
+                                        ContextMenuOpening="ContextMenu_ContextMenuOpening">
+
                                     <Border.ContextMenu>
                                         <ContextMenu>
-                                            <MenuItem Name="mnMoveLeft" Header="Move Left" />
-                                            <MenuItem Name="mnMoveRight" Header="Move Right" />
+                                            <MenuItem Name="mnMoveLeft" Header="Move Left" Click="MnMoveLeft_Click" />
+                                            <MenuItem Name="mnMoveRight" Header="Move Right" Click="MnMoveRight_Click" />
                                             <Separator />
                                             <MenuItem Name="mnRename" Header="Rename" Click="MnRename_Click" />
                                         </ContextMenu>
                                     </Border.ContextMenu>
-                                    <Grid>
+                                    
+                                    <Grid Margin="5,2">
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="*" />
                                             <ColumnDefinition Width="Auto" />
                                         </Grid.ColumnDefinitions>
 
-                                        <ContentPresenter x:Name="cnt" Grid.Column="0" Grid.ColumnSpan="2"
-                                                          Margin="10,2" MinWidth="50" MaxWidth="100"
+                                        <ContentPresenter x:Name="cnt" Grid.Column="0"
+                                                          MinWidth="50" MaxWidth="150"
                                                           VerticalAlignment="Center"
                                                           HorizontalAlignment="Center"
                                                           ContentSource="Header" />
@@ -49,7 +53,7 @@
                                     <Trigger Property="Header" Value="+">
                                         <Setter TargetName="cnt" Property="MinWidth" Value="0" />
                                         <Setter TargetName="cnt" Property="Margin" Value="0" />
-                                        <Setter TargetName="btnClose" Property="Visibility" Value="Hidden" />
+                                        <Setter TargetName="btnClose" Property="Visibility" Value="Collapsed" />
                                     </Trigger>
                                 </ControlTemplate.Triggers>
                             </ControlTemplate>
